<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.omralcorut.jiankun.CartActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:orientation="vertical" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="5dp"
            android:text="Total:"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/total_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/total"
            android:layout_marginLeft="16dp"
            android:text="24.00TL"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <Button
            android:id="@+id/empty_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@+id/btn_order"
            android:background="@color/colorPrimaryDark"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="EMPTY CART"
            android:textColor="@color/white"
            android:onClick="emptyCart"/>

        <Button
            android:id="@+id/btn_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:text="ORDER"
            android:textColor="@color/white"
            android:onClick="orderCart"/>
    </RelativeLayout>

</LinearLayout>
